NEXT-788 - Remove unused customer fields and product list filter and add whitelist of keys to sw-field with type number

--- a/Resources/administration/src/app/component/form/sw-field/sw-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-field/sw-field.html.twig
@@ -212,6 +212,7 @@
                            :disabled="disabled ? 'disabled' : false"
                            @input="onInput"
                            @change="onChange"
+                           @keypress="onKeyPress"
                            v-bind="$attrs"
                            v-on="additionalEventListeners">
                 {% endblock %}
