--- a/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
+++ b/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
@@ -7,5 +7,11 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+
+    &.sw-media-preview-item__audio {
+      top: 100%;
+      transform: translate(-50%, -100%);
+      padding-bottom: 5px;
+    }
   }
 }
