NTR - improve click Handling in Media Manager
* NTR: selection gets cleared on click on document
* NTR: click on Context Menu does not fire ElementClickedEvent
* NTR: prevent console warning on editing filename
* NTR: close quickinfo when no item is selected

--- a/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.html.twig
@@ -37,7 +37,7 @@
 
                 {% block sw_media_grid_item_context_menu %}
                     <div class="sw-media-grid-item__context-button">
-                        <sw-context-button>
+                        <sw-context-button ref="swContextButton">
                             {% block sw_media_grid_item_context_items%}{% endblock %}
                         </sw-context-button>
                     </div>
