--- a/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.html.twig
@@ -3,8 +3,7 @@
         <slot name="content">
             {% block sw_media_grid_slot_content %}
                 <div class="sw-media-grid__content"
-                     :style="mediaColumnDefinitions"
-                     @click.self="emitSelectionCleared">
+                     :style="mediaColumnDefinitions">
                     {% block sw_media_grid_content_cell %}
                         <div class="sw-media-grid__content-cell"
                              v-for="item in items"
