--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
@@ -17,6 +17,7 @@
     }
 
     .sw-media-quickinfo__two-columns {
+        list-style: none;
         display: grid;
         grid-template-columns: 50% 50%;
     }
