--- a/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
@@ -21,26 +21,26 @@
 
 {% block sw_media_grid_item_context_items%}
     {% block sw_media_griditem_context_item_detail %}
-        <sw-context-menu-item @click="showItemDetails($event)">
+        <sw-context-menu-item @click="showItemDetails">
             {{ $tc('global.sw-media-grid-media-item.contextMenuDetailLabel') }}
         </sw-context-menu-item>
     {% endblock %}
 
     <div class="sw-context-menu__group">
         {% block sw_media_griditem_context_item_copy_item_link %}
-            <sw-context-menu-item @click="copyItemLink()">
+            <sw-context-menu-item @click="copyItemLink">
                 {{ $tc('global.sw-media-grid-media-item.contextMenuCopyLinkLabel') }}
             </sw-context-menu-item>
         {% endblock %}
 
         {% block sw_media_griditem_context_item_replace %}
-            <sw-context-menu-item @click="replaceItem($event)">
+            <sw-context-menu-item @click="replaceItem">
                 {{ $tc('global.sw-media-grid-media-item.contextMenuReplaceLabel') }}
             </sw-context-menu-item>
         {% endblock %}
 
         {% block sw_media_griditem_context_item_delete %}
-            <sw-context-menu-item @click="deleteItem($event)" variant="danger">
+            <sw-context-menu-item @click="deleteItem" variant="danger">
                 {{ $tc('global.sw-media-grid-media-item.contextMenuDeleteLabel') }}
             </sw-context-menu-item>
         {% endblock %}
