--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
@@ -1,27 +1,27 @@
 {% block sw_media_quickinfo %}
     <div class="sw-media-quickinfo">
-        <template v-if="itemIsAvailable">
-            {% block sw_media_quickinfo_quickactions %}
-                <sw-media-collapse
-                    class="sw-media-quickinfo-collapse"
-                    :title="$tc('sw-media.sidebar.quickinfo.actions')"
-                    :expandOnLoading="true">
+        {% block sw_media_quickinfo_quickactions %}
+            <sw-media-collapse
+                class="sw-media-quickinfo-collapse"
+                :title="$tc('sw-media.sidebar.quickinfo.actions')"
+                :expandOnLoading="true">
 
-                    <template slot="content">
-                        {% block sw_media_quickinfo_quickactions_content %}
-                            <div class="sw-media-quickinfo__collapse-content sw-media-quickinfo__two-columns">
-                                {% block sw_media_quickinfo_quickactions_replace %}
-                                    <div class="sw-media-quickinfo__quickaction"
-                                         @click="emitQuickAction($event, 'replace-item')">
-                                        <sw-icon small
-                                                 name="default-action-cloud-upload"
-                                                 class="sw-media-quickinfo__quickactions-icon">
-                                        </sw-icon>
-                                        {{ $tc('sw-media.sidebar.quickinfo.replace') }}
-                                    </div>
-                                {% endblock %}
+                <template slot="content">
+                    {% block sw_media_quickinfo_quickactions_content %}
+                        <ul class="sw-media-quickinfo__collapse-content sw-media-quickinfo__two-columns">
+                            {% block sw_media_quickinfo_quickactions_replace %}
+                                <li class="sw-media-quickinfo__quickaction"
+                                    @click="emitQuickAction($event, 'replace-item')">
+                                    <sw-icon small
+                                             name="default-action-cloud-upload"
+                                             class="sw-media-quickinfo__quickactions-icon">
+                                    </sw-icon>
+                                    {{ $tc('sw-media.sidebar.quickinfo.replace') }}
+                                </li>
+                            {% endblock %}
 
-                                {% block sw_media_quickinfo_quickactions_download %}
+                            {% block sw_media_quickinfo_quickactions_download %}
+                                <li>
                                     <a class="sw-media-quickinfo__quickaction"
                                        :href="this.item.url"
                                        download>
@@ -31,110 +31,103 @@
                                         </sw-icon>
                                         {{ $tc('sw-media.sidebar.quickinfo.download') }}
                                     </a>
-                                {% endblock %}
+                                </li>
+                            {% endblock %}
 
-                                {% block sw_media_quickinfo_quickactions_move %}
-                                    <div class="sw-media-quickinfo__quickaction"
-                                         @click="emitQuickAction($event, 'move-item')">
-                                        <sw-icon small
-                                                 name="default-action-move-file"
-                                                 class="sw-media-quickinfo__quickactions-icon">
-                                        </sw-icon>
-                                        {{ $tc('sw-media.sidebar.quickinfo.move') }}
-                                    </div>
-                                {% endblock %}
+                            {% block sw_media_quickinfo_quickactions_move %}
+                                <li class="sw-media-quickinfo__quickaction"
+                                     @click="emitQuickAction($event, 'move-item')">
+                                    <sw-icon small
+                                             name="default-action-move-file"
+                                             class="sw-media-quickinfo__quickactions-icon">
+                                    </sw-icon>
+                                    {{ $tc('sw-media.sidebar.quickinfo.move') }}
+                                </li>
+                            {% endblock %}
 
-                                {% block sw_media_quickinfo_quickactions_delete %}
-                                    <div class="sw-media-quickinfo__quickaction"
-                                         @click="emitQuickAction($event, 'remove-item')">
-                                        <sw-icon small
-                                                 name="default-action-trash"
-                                                 class="sw-media-quickinfo__quickactions-icon">
-                                        </sw-icon>
-                                        {{ $tc('sw-media.sidebar.quickinfo.delete') }}
-                                    </div>
-                                {% endblock %}
+                            {% block sw_media_quickinfo_quickactions_delete %}
+                                <li class="sw-media-quickinfo__quickaction"
+                                     @click="emitQuickAction($event, 'remove-item')">
+                                    <sw-icon small
+                                             name="default-action-trash"
+                                             class="sw-media-quickinfo__quickactions-icon">
+                                    </sw-icon>
+                                    {{ $tc('sw-media.sidebar.quickinfo.delete') }}
+                                </li>
+                            {% endblock %}
 
-                                {% block sw_media_quickinfo_quickactions_copy_link %}
-                                    <div class="sw-media-quickinfo__quickaction"
-                                         @click="copyLinkToClipboard">
-                                        <sw-icon small
-                                                 name="default-web-link"
-                                                 class="sw-media-quickinfo__quickactions-icon">
-                                        </sw-icon>
-                                        {{ $tc('sw-media.sidebar.quickinfo.copyLink') }}
-                                    </div>
-                                {% endblock %}
+                            {% block sw_media_quickinfo_quickactions_copy_link %}
+                                <li class="sw-media-quickinfo__quickaction"
+                                     @click="copyLinkToClipboard">
+                                    <sw-icon small
+                                             name="default-web-link"
+                                             class="sw-media-quickinfo__quickactions-icon">
+                                    </sw-icon>
+                                    {{ $tc('sw-media.sidebar.quickinfo.copyLink') }}
+                                </li>
+                            {% endblock %}
 
-                                {% block sw_media_quickinfo_quickactions_more %}
-                                    <div class="sw-media-quickinfo__quickaction">
-                                        <sw-icon name="default-action-more-horizontal"
-                                                 class="sw-media-quickinfo__quickactions-icon"
-                                                 small>
-                                        </sw-icon>
-                                        {{ $tc('sw-media.sidebar.quickinfo.more') }}
-                                    </div>
+                            {% block sw_media_quickinfo_quickactions_more %}
+                                <li class="sw-media-quickinfo__quickaction">
+                                    <sw-icon name="default-action-more-horizontal"
+                                             class="sw-media-quickinfo__quickactions-icon"
+                                             small>
+                                    </sw-icon>
+                                    {{ $tc('sw-media.sidebar.quickinfo.more') }}
+                                </li>
+                            {% endblock %}
+                        </ul>
+                    {% endblock %}
+                </template>
+
+            </sw-media-collapse>
+        {% endblock %}
+
+        {% block sw_media_quickinfo_preview %}
+            <sw-media-collapse
+                class="sw-media-quickinfo-collapse"
+                :expandOnLoading="true"
+                :title="$tc('sw-media.sidebar.quickinfo.preview')">
+
+                <template slot="content">
+                    {% block sw_media_quickinfo_preview_content %}
+                        <div class="sw-media-quickinfo__collapse-content">
+                            <div class="sw-media-quickinfo__preview">
+                                {% block sw_media_quickinfo_preview_item %}
+                                    <sw-media-preview :item="item"
+                                                      :playable="true">
+                                    </sw-media-preview>
                                 {% endblock %}
                             </div>
-                        {% endblock %}
-                    </template>
+                        </div>
+                    {% endblock %}
+                </template>
 
-                </sw-media-collapse>
-            {% endblock %}
+            </sw-media-collapse>
+        {% endblock %}
 
-            {% block sw_media_quickinfo_preview %}
-                <sw-media-collapse
-                    class="sw-media-quickinfo-collapse"
-                    :expandOnLoading="true"
-                    :title="$tc('sw-media.sidebar.quickinfo.preview')">
+        {% block sw_media_quickinfo_metadata %}
+            <sw-media-collapse
+                class="sw-media-quickinfo-collapse"
+                :expandOnLoading="true"
+                :title="$tc('sw-media.sidebar.quickinfo.metadata')">
 
-                    <template slot="content">
-                        {% block sw_media_quickinfo_preview_content %}
-                            <div class="sw-media-quickinfo__collapse-content">
-                                <div class="sw-media-quickinfo__preview">
-                                    {% block sw_media_quickinfo_preview_item %}
-                                        <sw-media-preview :item="item"
-                                                          :playable="true">
-                                        </sw-media-preview>
-                                    {% endblock %}
-                                </div>
-                            </div>
-                        {% endblock %}
-                    </template>
+                <template slot="content">
+                    {% block sw_media_quickinfo_metadata_content %}
+                        <div class="sw-media-quickinfo__collapse-content sw-media-quickinfo__two-columns">
+                            <template v-for="(value, key) in getMetadata">
+                                {% block sw_media_quickinfo_metadata_attribute %}
+                                    <div class="sw-media-quickinfo__metadata-description">{{ $tc('sw-media.sidebar.metadata.' + key) }}:</div>
+                                {% endblock %}
+                                {% block sw_media_quickinfo_metadata_value %}
+                                    <div class="sw-media-quickinfo__metadata-value">{{ value }}</div>
+                                {% endblock %}
+                            </template>
+                        </div>
+                    {% endblock %}
+                </template>
 
-                </sw-media-collapse>
-            {% endblock %}
-
-            {% block sw_media_quickinfo_metadata %}
-                <sw-media-collapse
-                    class="sw-media-quickinfo-collapse"
-                    :expandOnLoading="true"
-                    :title="$tc('sw-media.sidebar.quickinfo.metadata')">
-
-                    <template slot="content">
-                        {% block sw_media_quickinfo_metadata_content %}
-                            <div class="sw-media-quickinfo__collapse-content sw-media-quickinfo__two-columns">
-                                <template v-for="(value, key) in getMetadata">
-                                    {% block sw_media_quickinfo_metadata_attribute %}
-                                        <div class="sw-media-quickinfo__metadata-description">{{ $tc('sw-media.sidebar.metadata.' + key) }}:</div>
-                                    {% endblock %}
-                                    {% block sw_media_quickinfo_metadata_value %}
-                                        <div class="sw-media-quickinfo__metadata-value">{{ value }}</div>
-                                    {% endblock %}
-                                </template>
-                            </div>
-                        {% endblock %}
-                    </template>
-
-                </sw-media-collapse>
-            {% endblock %}
-        </template>
-        <template v-else>
-            {% block sw_media_quickinfo_no_item_selected %}
-                <sw-alert variant="warning" :showIcon="false">
-                    {{ $tc('sw-media.sidebar.quickinfo.nothingSelected') }}
-                </sw-alert>
-            {% endblock %}
-        </template>
+            </sw-media-collapse>
+        {% endblock %}
     </div>
 {% endblock %}
