--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-list/sw-manufacturer-list.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-list/sw-manufacturer-list.html.twig
@@ -1,6 +1,15 @@
 {% block sw_manufacturer_list %}
     <sw-page class="sw-manufacturer-list">
 
+        {% block sw_manufacturer_list_search_bar %}
+            <template slot="search-bar">
+                <sw-search-bar :placeholder="$tc('sw-manufacturer.general.placeholderSearchBar')"
+                               :searchType="$tc('sw-manufacturer.general.mainMenuItemGeneral')"
+                               @search="this.onSearch">
+                </sw-search-bar>
+            </template>
+        {% endblock %}
+
         {% block sw_manufacturer_list_smart_bar_header %}
             <template slot="smart-bar-header">
                 {% block sw_manufacturer_list_smart_bar_header_title %}
