--- a/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-list/sw-settings-country-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-list/sw-settings-country-list.html.twig
@@ -2,9 +2,12 @@
     {% block sw_settings_country_index %}
         <sw-page class="sw-settings-country-list">
 
-            {% block sw_settings_country_list_search_bar_type %}
-                <template slot="search-bar-type">
-                    {{ $tc('sw-settings-country.list.textHeadline') }}
+            {% block sw_settings_country_list_search_bar %}
+                <template slot="search-bar">
+                    <sw-search-bar :placeholder="$tc('sw-settings-country.general.placeholderSearchBar')"
+                                   :searchType="$tc('sw-settings-country.general.mainMenuItemGeneral')"
+                                   @search="this.onSearch">
+                    </sw-search-bar>
                 </template>
             {% endblock %}
 
