--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
@@ -1,12 +1,14 @@
 @import "~less/variables";
 
-@sw-media-catalog-color-text-button: @color-kashmir;
-@sw-media-catalog-color-change-icon-size-label: @color-kashmir;
-@sw-media-catalog-color-change-icon-size-slider: @color-deep-cove;
-@sw-media-catalog-color-change-icon-size-slide: @color-gutenberg;
-@sw-media-catalog-color-change-icon-size-slide-border: @color-steam-cloud;
-@sw-media-catalog-border-radius-change-icon-size-slide: @border-radius-default;
-@sw-media-catalog-font-family: @font-family-default;
+@sw-media-catalog-color-text-button:                 @color-kashmir;
+@sw-media-catalog-color-change-icon-size-label:      @color-kashmir;
+@sw-media-catalog-color-change-icon-size-slider:     @color-deep-cove;
+@sw-media-catalog-color-change-icon-size-slide:      @color-gutenberg;
+@sw-media-catalog-color-slider-container-border:     @color-steam-cloud;
+@sw-media-catalog-border-radius-slider-container:    @border-radius-default;
+@sw-media-catalog-background-color-slider-container: @color-white;
+@sw-media-catalog-border-radius-size-slider:         @border-radius-default;
+@sw-media-catalog-font-family:                       @font-family-default;
 
 .sw-media-catalog {
     .sw-media-catalog__page-content {
@@ -26,6 +28,7 @@
 
     .sw-media-catalog__content {
         display: grid;
+        grid-template-rows: 64px 1fr 64px;
         position:absolute;
         height: 100%;
         width: 100%;
@@ -43,30 +46,19 @@
     }
 
     .sw-media-catalog__options-container {
-        text-align: right;
-        padding: 5px;
-    }
-
-    .sw-media-catalog__sort-by {
-        display: inline-block;
-        font-size: 14px;
-        line-height: 16px;
-        margin-right: 16px;
-        vertical-align: middle;
-
-
-        @media screen and (max-width: 900px) {
-            display: none;
-        }
+        margin-left: auto;
+        height: 64px;
+        padding: 10px;
 
         .sw-field {
-            display: grid;
+            display: inline-grid;
+            width: auto;
             grid-template-columns: auto auto;
             align-items: center;
+            margin-right: 16px;
 
             label {
-                margin-right: 10px;
-                margin-top: 8px;
+                margin: 8px 10px 8px 0;
                 text-align: right;
             }
 
@@ -107,66 +99,49 @@
     }
 
     .sw-media-catalog__icon-size {
-        display: inline-block;
-        width: 260px;
-        height: 33px;
+        display: inline-grid;
+        grid-template-columns: auto auto;
+        align-items: center;
     }
 
     .sw-media-catalog__icon-size-label {
-        display: inline-block;
-        margin-right: 10px;
+        margin: 8px 10px 8px 0;
+        font-size: @font-size-small;
         color: @sw-media-catalog-color-change-icon-size-label;
-        font-size: 14px;
-        position: relative;
-        top: -34%;
     }
 
     .sw-media-catalog__icon-size-slider {
         -webkit-appearance: none;
-        width: 86px;
-        height: 6px;
-        border-radius: @sw-media-catalog-border-radius-change-icon-size-slide;
+        margin: 0 5px;
+        height: 7px;
+        border-radius: @sw-media-catalog-border-radius-size-slider;
         background: @sw-media-catalog-color-change-icon-size-slide;
-        outline: none;
         opacity: 0.7;
-        transition: opacity .2s;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
+        transform: translate(0px, 50%);
     }
 
     .sw-media-catalog__icon-size-slider::-webkit-slider-thumb {
         -webkit-appearance: none;
-        width: 12px;
-        height: 12px;
+        width: 14px;
+        height: 14px;
         border-radius: 50%;
         background: @sw-media-catalog-color-change-icon-size-slider;
         cursor: pointer;
     }
 
     .sw-media-catalog__icon-size-slider::-moz-range-thumb {
-        width: 12px;
-        height: 12px;
+        width: 14px;
+        height: 14px;
         border-radius: 50%;
         background: @sw-media-catalog-color-change-icon-size-slider;
         cursor: pointer;
     }
 
-    .sw-media-catalog__icon-size-slider:hover {
-        opacity: 1;
-    }
-
-    .sw-media-catalog__size-slider-border {
-        margin-right: 10px;
-        padding: 15px;
-        border: 1px solid @sw-media-catalog-color-change-icon-size-slide-border;
-        border-radius: @sw-media-catalog-border-radius-change-icon-size-slide;
-        position: relative;
-        display: inline-block;
-        width: 130px;
+    .sw-media-catalog__size-slider-container {
+        height: 100%;
+        border: 1px solid @sw-media-catalog-color-slider-container-border;
+        border-radius: @sw-media-catalog-border-radius-slider-container;
+        background-color: @sw-media-catalog-background-color-slider-container;
     }
 }
 
