--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
@@ -161,8 +161,8 @@
                             <sw-media-sidebar
                                 :item="lastSelectedItem"
                                 v-on="mediaSidebarListener"
-                                ref="mediaSidebar"
-                            ></sw-media-sidebar>
+                                ref="mediaSidebar">
+                            </sw-media-sidebar>
                         </div>
                     {% endblock %}
                 </div>
