--- a/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
@@ -1,5 +1,5 @@
 {% block sw_media_grid_item_preview %}
-    <sw-media-preview :item="item">
+    <sw-media-preview :item="item" @sw-media-preview-play="emitPlayEvent">
     </sw-media-preview>
 {% endblock %}
 
