--- a/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.html.twig
@@ -14,7 +14,8 @@
                                 :item="item"
                                 :containerOptions="containerOptions"
                                 @sw-media-grid-item-selection-add="handleSelection"
-                                @sw-media-grid-item-clicked="handleClick"
+                                @sw-media-grid-item-clicked="mediaItemClicked"
+                                @sw-media-grid-item-play="mediaItemPlayed"
                                 @sw-media-grid-item-selection-remove="removeFromSelection"
                                 v-on="$listeners">
                             </component>
