--- a/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
+++ b/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
@@ -1,17 +1,38 @@
+@import "~less/variables";
+
+@sw-media-preview-play-button-size:                 35px;
+@sw-media-preview-play-button-z-index:              50;
+
 .sw-media-preview {
 
-  .sw-media-preview-item {
-    max-width: 100%;
-    max-height: 100%;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    .sw-media-preview__item {
+        max-width: 100%;
+        max-height: 100%;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
 
-    &.sw-media-preview-item__audio {
-      top: 100%;
-      transform: translate(-50%, -100%);
-      padding-bottom: 5px;
+        &.sw-media-preview__item--audio {
+            top: 100%;
+            transform: translate(-50%, -100%);
+            padding-bottom: 5px;
+        }
     }
-  }
+
+    .sw-media-preview__play-button {
+        position: absolute;
+        visibility: hidden;
+        z-index: @sw-media-preview-play-button-z-index;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        cursor: pointer;
+    }
+
+    .sw-media-preview__play-icon {
+        visibility: visible;
+        height: @sw-media-preview-play-button-size;
+        width: @sw-media-preview-play-button-size;
+    }
 }
