NEXT- 788 - Fix issues in product module

--- a/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.less
+++ b/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.less
@@ -78,6 +78,7 @@
         color: @sw-multi-select-selection-item-color-text;
         flex-shrink: 0;
         cursor: default;
+        border: 1px solid transparent;
 
         &.is--clickAble {
             cursor: pointer;
