NTR fix the quickinfo

--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
@@ -23,7 +23,7 @@
                             {% block sw_media_quickinfo_quickactions_download %}
                                 <li>
                                     <a class="sw-media-quickinfo__quickaction"
-                                       :href="this.item.url"
+                                       :href="getUrl"
                                        target="_blank"
                                        download>
                                         <sw-icon small
