--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.less
@@ -21,6 +21,7 @@
     }
 
     .sw-media-quickinfo-multiple__two-columns {
+        list-style: none;
         display: grid;
         grid-template-columns: 50% 50%;
     }
